Fix DirectoryLoader recursion. Patch by Andreas Mützel <andreas.muetzel@gmx.net>.

BUG: 166549

svn path=/trunk/extragear/multimedia/amarok/; revision=858442